Fixed book covers in cards as height was not auto and it was deforming the image

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -65,7 +65,7 @@ main {
 
 .card-img-top {
     width: 100%;
-    height: 25vh;
+    height: auto;
     object-fit: cover;
 }
 
